# flask-rest

./: Dockerfile  Makefile  README.md  pyproject.toml
flaskr/: __init__.py  api.py  cmd.py  forms.py  schema.sql  uploads.py
flaskr/templates/: base.html
flaskr/templates/blog/: forms.html
flaskr/templates/cmd/: index.html
flaskr/templates/proc/: index.html
